--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
 .App {
+  margin: auto;
+  width: 100%;
+  max-width: 700px;
+  margin-top: 50px;
+}
+
+.App header {
+  text-transform: uppercase;
+  color: transparent;
+  color: #8785a2;
+  font-size: 4rem;
+  padding: 30px;
   text-align: center;
+  font-weight: bold;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App .add {
+  background-color: #dbe2ef;
+  padding: 15px 30px;
+  -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
+	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
+  margin-bottom: 30px;
+  border-radius: 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App .add form {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.App .add input {
+  border: 1px solid white;
+  border-radius: 500px;
+  padding: 10px 10px 10px 20px;
+  width: 100%;
+  font-size: 1rem;
+  outline: none;
+  color: #314e52;
+  font-weight: 300;
+}
+
+.App .add button {
+  background: -webkit-radial-gradient(bottom left, #ffc73c, salmon);
+  color: white;
+  padding: 10px 15px;
+  border: 0;
+  border-radius: 15px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  font-size: 1em;
+  margin-left: 15px;
+}
+
+.App .add button svg {
+  margin-right: 5px;
+}
+
+.task {
+  padding: 15px 30px;
+  transition: .1s;
+  margin-bottom: 5px;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
+	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
+}
+
+.task:hover {
+  background-color: #f2a154;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.task svg {
+  margin-right: 9px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.task .content {
+  width: 100%;
 }
